--- a/Reference.bib
+++ b/Reference.bib
@@ -33,7 +33,7 @@
     publisher = {Springer Publishing Company, Incorporated},
 }
 
-@inproceedings{mal14b,
+@inproceedings{mal1,
     author = {Mateusz Malinowski and Mario Fritz},
     title = {A Multi-World Approach to Question Answering about Real-World Scenes based on Uncertain Input},
     booktitle = {NIPS},
@@ -522,12 +522,10 @@
     year = {2015},
 }
 
-@article{mal15,
+@inproceedings{mal2,
     author = {Mateusz Malinowski and Marcus Rohrbach and Mario Fritz},
     title = "{Ask Your Neurons: A Neural-based Approach to Answering Questions about Images}",
-    journal = {CoRR},
-    archivePrefix = "arXiv",
-    volume = {abs/1505.01121},
+    booktitle = {ICCV},
     year = {2015},
 }
 
