--- a/poster.tex
+++ b/poster.tex
@@ -1,4 +1,4 @@
-\documentclass[serif,mathserif,final]{beamer}
+\documentclass{beamer}
 \usepackage{epsf}
 \usepackage{subfigure}
 \usepackage{tabularx}
@@ -19,73 +19,62 @@
 \usepackage{latexsym}
 \usepackage{amsmath,amsfonts,amssymb,xspace}
 \usepackage{graphicx}
+\usepackage{qtree}
+\usepackage{ulem}
 
+\def\UrlFont{\bfseries}
+
+%\renewcommand*{\familydefault}{\sfdefault}
 \renewcommand{\algorithmiccomment}[1]{\hfill\eqparbox{COMMENT}{#1}}
 \renewcommand{\*}[1]{\textbf{#1}}
 \setbeamertemplate{bibliography item}[text]
 \setbeamertemplate{bibliography entry title}{}
 \setbeamertemplate{bibliography entry location}{}
 \setbeamertemplate{bibliography entry note}{}
-\mode<presentation>{
-  \definecolor{uagreen}{RGB}{0,124,65}
-  \definecolor{utor}{RGB}{12,28,71}
-  \definecolor{utor2}{RGB}{0,32,78}
-  \setbeamercolor{structure}{fg=utor2}
-  \setbeamercolor{headline}{bg=white}
-  \setbeamercolor{footline}{bg=black}
-  \setbeamerfont{footline}{size=\large}
-  \setbeamercolor{separation line}{bg=black}
-  \setbeamercolor{title in headline}{fg=utor2}
-  \setbeamercolor{author in headline}{fg=black}
-  \setbeamercolor{institute in headline}{fg=lightgray}
-  \setbeamercolor{framesubtitle}{fg=blue, bg=gray}
-  \setbeamercolor{author in head/foot}{fg=black,bg=black}
-  \setbeamercolor{section in head/foot}{use=structure,bg=structure.fg!25!bg}
-  \setbeamertemplate{headline}{
-  \leavevmode
-  {\usebeamercolor{section in head/foot}}
-  \pgfdeclareverticalshading{beamer@headfade}{\paperwidth}{%
-  color(0cm)=(bg); color(1.5cm)=(section in head/foot.bg) }
-  \setbeamercolor{section in head/foot}{bg=} 
-  \begin{beamercolorbox}[wd=\paperwidth]{headline}
-    \begin{columns}[T]
-      \begin{column}{.04\paperwidth} %0.02
-      \end{column}
-      \begin{column}{0.05\paperwidth} %0.07
-        \centering
-        \vskip 4ex
-        \vspace{1pt}
-      \end{column}
-      \begin{column}{.675\paperwidth} %0.675
-        \vskip 4ex
-        \usebeamercolor{title in headline}
-        {\color{fg}\textbf{\LARGE{\inserttitle}}\\[1ex]}
-        \usebeamercolor{author in headline}
-        {\color{fg}\Large{\insertauthor} \hspace{15mm}}
-        \usebeamercolor{institute in headline}
-        {\color{fg}\large{\insertinstitute}\\[1ex]}
-        \vskip 2ex
-        \end{column}
-        \begin{column}{.25\paperwidth}
-          \centering
-          \vskip 4ex
-          \hspace{-2in}
-          \includegraphics[height=0.04\paperwidth]{logo.jpg} %0.025
-          \vspace{1pt}
-        \end{column}
-        \begin{column}{.03\paperwidth}
-        \end{column}
-      \end{columns}
-    \end{beamercolorbox}
 
-    \begin{beamercolorbox}[wd=\paperwidth]{lower separation line head}
-      \rule{0pt}{2pt}
-    \end{beamercolorbox}
-    \vskip 4ex
-  }
-  %\addtoheadtemplate{\pgfuseshading{beamer@headfade}\vskip-1.5cm}{}
-  \setbeamertemplate{items}[ball]   % 3-D balls for itemize/enumerate
-  \mode<all>
+\mode<presentation>{
+\definecolor{uagreen}{RGB}{0,124,65}
+\definecolor{utor}{RGB}{12,28,71}
+\definecolor{utor2}{RGB}{0,32,78}
+\setbeamercolor{structure}{fg=utor2}
+\setbeamercolor{headline}{bg=white}
+\setbeamercolor{footline}{bg=black}
+\setbeamerfont{footline}{size=\large}
+\setbeamercolor{separation line}{bg=black}
+\setbeamercolor{title in headline}{fg=utor2}
+\setbeamercolor{author in headline}{fg=black}
+\setbeamercolor{institute in headline}{fg=gray}
+\setbeamercolor{framesubtitle}{fg=blue, bg=gray}
+\setbeamercolor{author in head/foot}{fg=black,bg=black}
+\setbeamercolor{section in head/foot}{use=structure,bg=structure.fg!25!bg}
+\setbeamertemplate{headline}{
+\leavevmode
+{\usebeamercolor{section in head/foot}}
+\pgfdeclareverticalshading{beamer@headfade}{\paperwidth}{%
+color(0cm)=(bg); color(1.5cm)=(section in head/foot.bg) }
+\setbeamercolor{section in head/foot}{bg=} 
+\begin{beamercolorbox}[wd=\paperwidth]{headline}
+
+\begin{columns}[T]
+
+\begin{column}{\paperwidth}
+\centering
+\vskip 8ex
+\usebeamercolor{title in headline}
+{\color{fg}\textbf{\LARGE{\inserttitle}}\\[4ex]}
+
+\usebeamercolor{author in headline}
+{\color{fg}\large{\insertauthor}\hspace{15mm}}
+\usebeamercolor{institute in headline}
+{\color{fg}\large{\insertinstitute}\\[1ex]}
+\vskip 4ex
+\end{column}
+
+\end{columns}
+\end{beamercolorbox}
+}
+\setbeamertemplate{items}[ball]   % 3-D balls for itemize/enumerate
+\mode<all>
 }
 
 \graphicspath{{./figures/}} %142.24, 96.52
@@ -93,8 +82,6 @@
 size=custom,width=111.76,height=96.52,scale=1.4,debug]{beamerposter} %0.6
 
 %-- Header and footer information ----------------------------------
-%\newcommand{\footleft}{http://www.shawnlankton.com/category/latex/}
-%\newcommand{\footright}{shawn at shawn lankton dot com}
 \title{\huge{Exploring Models and Data for Image Question Answering}}
 \author{Mengye Ren, Ryan Kiros, Richard S. Zemel}
 \institute{University of Toronto}
@@ -103,155 +90,173 @@ size=custom,width=111.76,height=96.52,scale=1.4,debug]{beamerposter} %0.6
 %-- Main Document --------------------------------------------------
 \begin{document}
 \begin{frame}{}
-\begin{columns}[t]
+\begin{columns}[T]
 
 %-- Column 1 ---------------------------------------------------
 \begin{column}{0.32\linewidth}
-\minipage[c][0.9\textheight][s]{\columnwidth}
-\vfill
+\minipage[t][0.9\textheight][s]{\columnwidth}
 
 %-- Block 1-1 --------------------------------------------------
 \begin{block}{\bf{\large Problem}}
-	\begin{itemize}
-	  \item Image Question Answering (QA): given an image and a free-form 
-    question, find an answer.
-    \item We assume that answers are one-word, thus we can treat it as a 
-    classification problem.
-	\end{itemize}
-    \begin{figure}[h!]
-    \centering
-    \scriptsize
-    $\begin{array}{p{8.3cm} p{8.3cm} p{8.3cm} p{8.3cm}}
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{1553.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        DAQUAR 1553\\
-        \textbf{What is there in front of the sofa?}\\
-        Ground truth: table\\
-        IMG+BOW: \textcolor{green}{table (0.74)}\\
-        2-VIS+BLSTM: \textcolor{green}{table (0.88) }\\
-        LSTM: \textcolor{red}{chair (0.47) }
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{5078.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        COCOQA 5078\\
-        \textbf{How many leftover donuts is the red bicycle holding?}\\
-        Ground truth: three\\
-        IMG+BOW: \textcolor{red}{two (0.51)}\\
-        2-VIS+BLSTM: \textcolor{green}{three (0.27)}\\
-        BOW: \textcolor{red}{one (0.29)}
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{1238.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        COCOQA 1238\\
-        \textbf{What is the color of the tee-shirt?}\\
-        Ground truth: blue\\
-        IMG+BOW: \textcolor{green}{blue (0.31) }\\
-        2-VIS+BLSTM: \textcolor{red}{orange (0.43) }\\
-        BOW: \textcolor{red}{green (0.38) }
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{135.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        COCOQA 26088\\
-        \textbf{Where is the gray cat sitting?}\\
-        Ground truth: window\\
-        IMG+BOW: \textcolor{green}{window (0.78) }\\
-        2-VIS+BLSTM: \textcolor{green}{window (0.68) }\\
-        BOW: \textcolor{red}{suitcase (0.31) }
-    }
-    \end{array}$
-    \caption{Sample questions and responses of a variety of models. 
-    Correct answers are in green and incorrect in red. The numbers in 
-    parentheses are the probabilities assigned to the top-ranked answer by the 
-    given model. The leftmost example is from the DAQUAR dataset, and the 
-    others are from our new COCO-QA datset.}
-    \label{fig:number_questions}
-    \end{figure}
+\begin{itemize}
+\item Image Question Answering: given an image and a free-form question,
+find an answer.
+
+\item We assume that answers are one-word, thus we can treat
+it as a classification problem.
+\end{itemize}
+
+\begin{figure}[h!]
+\centering
+\scriptsize
+$\begin{array}{p{8.3cm} p{8.3cm} p{8.3cm} p{8.3cm}}
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{1553.jpg}}
+
+\parbox{8cm}{
+\vskip 0.05in
+DAQUAR 1553\\
+\textbf{What is there in front of the sofa?}\\
+Ground truth: table\\
+I+BOW: \textcolor{green}{table (0.74)}\\
+2V+BLSTM: \textcolor{green}{table (0.88) }\\
+LSTM: \textcolor{red}{chair (0.47) }
+}
+&
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{5078.jpg}}
+
+\parbox{8cm}{
+\vskip 0.05in
+COCOQA 5078\\
+\textbf{How many leftover donuts is the red bicycle holding?}\\
+Ground truth: three\\
+I+BOW: \textcolor{red}{two (0.51)}\\
+2V+BLSTM: \textcolor{green}{three (0.27)}\\
+BOW: \textcolor{red}{one (0.29)}
+}
+&
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{1238.jpg}}
+
+\parbox{8cm}{
+\vskip 0.05in
+COCOQA 1238\\
+\textbf{What is the color of the tee-shirt?}\\
+Ground truth: blue\\
+I+BOW: \textcolor{green}{blue (0.31) }\\
+2V+BLSTM: \textcolor{red}{orange (0.43) }\\
+BOW: \textcolor{red}{green (0.38) }
+}
+&
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{135.jpg}}
+
+\parbox{8cm}{
+\vskip 0.05in
+COCOQA 26088\\
+\textbf{Where is the gray cat sitting?}\\
+Ground truth: window\\
+I+BOW: \textcolor{green}{window (0.78) }\\
+2V+BLSTM: \textcolor{green}{window (0.68) }\\
+BOW: \textcolor{red}{suitcase (0.31) }
+}
+\end{array}$
+
+\label{fig:number_questions}
+\end{figure}
 \end{block}
 \vfill
 
 %-- Block 1-2 --------------------------------------------------
-\begin{block}{\bf{\large Our Models}}
-  \begin{itemize}
-  \item \*{VIS+LSTM Model}
-  \begin{figure}[t!]
-  \centering
-  \small
-  \scalebox{1.0}{
-  \input{imgword.tex}}
-  \caption{VIS+LSTM Model}
-  \label{fig:imgword}
-  \end{figure}
-  \begin{itemize}
-  \item Borrowed the idea of treating the image as a word from previous caption 
-  generation work done by Vinyals et al. \cite{vinyals14}. 
-  \item Image features are passed through a linear transformation to match with 
-  word vector dimensions.
-  \item At the last time step, the Long Short Term Memory (LSTM) 
-  \cite{hochreiter97} outputs to the softmax layer to classify answers.
-  \end{itemize}
-  \item \*{2-VIS+BLSTM Model}
-  \begin{itemize}
-  \item Two image feature inputs, at the start and the end of the question, with different learned linear transformations.
-  \item LSTMs going in both the forward and backward directions. 
-  \item Both LSTMs output to the softmax layer.
-  \end{itemize}
-  \item \*{IMG+BOW} Multinomial logistic regression based on the CNN image features (4096 dimension), and learned bag-of-word (BOW) vectors.
-  \item \*{FULL} A simple average of the three models above.
-  \end{itemize}
+\begin{block}{\bf{\large Automatic QA Generation}}  
+
+\begin{itemize}
+
+\item We generate 4 types of questions: object, number, color, location,
+directly from image description.
+
+\item All answers are one-word.
+
+\item We move the wh-word and verb to the front under certain constraints.  For
+example, ``A man is riding a \*{horse}'' $=>$ ``\*{What} is \*{the} man
+riding?''
+
+\begin{figure}[h!]
+\centering
+
+\scalebox{0.8}{
+\Tree [.S [.NP [.DET a ] [.N man ] ] [.VP [.V is ] [.NP [.VBG
+riding ] [.NP [.DET a ] [.N horse ] ] ] ] ]}
+\scalebox{0.8}{
+\Tree [.S [.WHNP [.WP \textbf{what} ] ] [.S [.V is ] [.NP [.DET \textbf{the} ]
+[.N man ] ] [.VP [.V \sout{is} ] [.NP [.VBG riding ] [.WHNP [.WP \sout{what} ]
+] ] ] ] ]}
+
+\vspace{5mm}
+\end{figure}
+
+\item We pruned answers that appear too rarely or too often.
+\end{itemize}
+
 \end{block}
 \vfill
 
 %-- Block 1-3 --------------------------------------------------
-\begin{block}{\bf{\large Automatic QA Generation}}  
-  \begin{itemize}
-    \item {\bf{Motivation}} Currently available dataset DAQUAR \cite{mal14a} is 
-    very small (1500 images, 7000 QA on 37 classes of objects, 12000 QA on 894 
-    classes of objects). Guessing the modes can yield very good accuracy, and 
-    ``blind models'' can achieve almost equal performance compared the best 
-    model.
-  \end{itemize}
+\begin{block}{\bf{\large Baselines}}
+\begin{itemize}
+\item \*{GUESS} Predict the most frequent answer based on the question type.
+
+\item \*{BOW} Given only the questions without the images and perform logistic
+regression on the bag-of-words vector to classify answers.
+
+\item \*{LSTM} Input the question words into the LSTM alone.
+
+\item \*{IMG} Re-train a separate CNN classification layer for each type of
+question.
+
+\item \*{IMG+PRIOR} Combine the prior knowledge of an object and the image
+understanding from the ``deaf model''. $c$: color, $o$: object of interest, and
+$x$: image. Assuming $o$ and $x$ are conditionally independent given the $c$.
+Use the output of the IMG model as $p(c | x)$. $p(c | o, x) = \frac{p(o | c)
+p(c | x)}{\sum_{c \in \mathcal{C}} p(o | c) p(c | x)}$. Empirical estimate:
+$\hat{p}(o | c) = \frac{count(o, c)}{count(c)}$ and Laplace smoothing.
+\end{itemize}
 \end{block}
+\vfill
 
 \endminipage
 \end{column}
 
 %-- Column 2 ---------------------------------------------------
 \begin{column}{0.32\linewidth}
-\minipage[c][0.9\textheight][s]{\columnwidth}
+\minipage[t][0.9\textheight][s]{\columnwidth}
 
 %-- Block 2-1 --------------------------------------------------
-\begin{block}{}
+\begin{block}{\bf{\large Our Models}}
 \begin{itemize}
-    \item We generate 4 types of questions: object, number, color, location, 
-    directly from image description.
-    \item All answers are one-word.
-    \item We move the wh-word and verb to the front under certain constraints. 
-    For example, ``A man is riding a \*{horse}'' $=>$ ``\*{What} is \*{the} man 
-    riding?''
-    \item We pruned answers that appear too rarely or too often.
-\end{itemize}
-\end{block}
-\vfill
+\item \*{VIS+LSTM} Treats the image as a word (Vinyals et al. \cite{vinyals14}).
 
-\begin{block}{\bf{\large Baselines}}
-  \begin{itemize}
-  \item \*{GUESS} Predict the mode based on the question type.
-  \item \*{BOW} Given only the questions without the images and perform logistic regression on the bag-of-words vector to classify answers.
-  \item \*{LSTM} Input the question words into the LSTM alone.
-  \item \*{IMG} Re-train a separate CNN classification layer for each type of question.
-  \item \*{IMG+PRIOR} Combine the prior knowledge of an object and the image understanding from the "deaf model". Denote $c$ as the color, $o$ as the class of the   object of interest, and $x$ as the image. Assuming $o$ and $x$ are conditionally independent given the color. Use the output of the IMG model as $p(c | x)$. $p(c | o, x) = \frac{p(o | c) p(c | x)}{\sum_{c \in \mathcal{C}}  p(o | c) p(c | x)}$. Empirical estimate: $\hat{p}(o | c) = \frac{count(o, c)}{count(c)}$ and Laplace smoothing.
-  \end{itemize}
+\begin{figure}[t!]
+\centering
+\small
+\scalebox{1.0}{
+\input{imgword.tex}}
+\label{fig:imgword}
+\end{figure}
+
+\item \*{2-VIS+BLSTM} Two image feature inputs, at the start and the end of the
+question, with different linear transformations. LSTMs going in forward and
+backward directions. 
+
+\item \*{IMG+BOW} Softmax on top CNN features and learned BOW vectors.
+
+\item \*{FULL} A simple average of the three models above.
+\end{itemize}
 \end{block}
 \vfill
 
@@ -262,6 +267,7 @@ size=custom,width=111.76,height=96.52,scale=1.4,debug]{beamerposter} %0.6
 \small
 \label{tab:dataset_category_stats}
 \begin{center}
+
 \begin{tabular}{c c c c c}
 \hline
 Category & Train & \%       & Test  & \%       \\
@@ -274,6 +280,7 @@ Location & 4800  & 6.10\%   & 2478  & 6.36\%   \\
 Total    & 78736 & 100.00\% & 38948 & 100.00\% \\
 \hline
 \end{tabular}
+
 \end{center}
 \end{table}
 \vfill
@@ -283,26 +290,31 @@ Total    & 78736 & 100.00\% & 38948 & 100.00\% \\
 \small
 \label{tab:daquar_results}
 \begin{center}
+
 \begin{tabular}{c | c c c | c c c}
 \hline
-             &          &  DAQUAR  &          &          &  COCO-QA &          \\
-             & Acc.     & WUPS 0.9 & WUPS 0.0 & Acc.     & WUPS 0.9 & WUPS 0.0 \\
+            &          &  DAQUAR  &          &          &  COCO-QA &          \\
+            & Acc.     & WUPS 0.9 & WUPS 0.0 & Acc.     & WUPS 0.9 & WUPS 0.0 \\
 \hline         
-MULTI-WORLD \cite{mal14b}&  0.1273  &  0.1810  &  0.5147  &  -       &  -       &  -       \\
-GUESS        &  0.1824  &  0.2965  &  0.7759  &  0.0665  &  0.1742  &  0.7344  \\
-BOW          &  0.3267  &  0.4319  &  0.8130  &  0.3752  &  0.4854  &  0.8278  \\
-LSTM         &  0.3273  &  0.4350  &  0.8162  &  0.3676  &  0.4758  &  0.8234  \\
-IMG          &  -       &  -       &  -       &  0.4302  &  0.5864  &  0.8585  \\
-IMG+PRIOR    &  -       &  -       &  -       &  0.4466  &  0.6020  &  0.8624  \\
-IMG+BOW      &  0.3417  &  0.4499  &  0.8148  &\*{0.5592}&\*{0.6678}&\*{0.8899}\\
-VIS+LSTM     &  0.3441  &  0.4605  &\*{0.8223}&  0.5331  &  0.6391  & 0.8825   \\
-ASK-NEURON \cite{mal15}&  0.3468  &  0.4076  & 0.7954   &  -       &  -       &  -       \\
-2-VIS+BLSTM  &\*{0.3578}&\*{0.4683}& 0.8215   &  0.5509  &  0.6534  & 0.8864   \\
-FULL         &\*{0.3694}&\*{0.4815}&\*{0.8268}&\*{0.5784}&\*{0.6790}&\*{0.8952}\\
+MULTI-WORLD 
+\cite{mal1} &  0.1273  &  0.1810  &  0.5147  &  -       &  -       &  -       \\
+GUESS       &  0.1824  &  0.2965  &  0.7759  &  0.0665  &  0.1742  &  0.7344  \\
+BOW         &  0.3267  &  0.4319  &  0.8130  &  0.3752  &  0.4854  &  0.8278  \\
+LSTM        &  0.3273  &  0.4350  &  0.8162  &  0.3676  &  0.4758  &  0.8234  \\
+IMG         &  -       &  -       &  -       &  0.4302  &  0.5864  &  0.8585  \\
+IMG+PRIOR   &  -       &  -       &  -       &  0.4466  &  0.6020  &  0.8624  \\
+K-NN(K=31,13)&  0.3185 &  0.4242  &  0.8063  &  0.4496  &  0.5698  &  0.8557  \\
+IMG+BOW     &  0.3417  &  0.4499  &  0.8148  &\*{0.5592}&\*{0.6678}&\*{0.8899}\\
+VIS+LSTM    &  0.3441  &  0.4605  &\*{0.8223}&  0.5331  &  0.6391  & 0.8825   \\
+ASK-NEURON 
+\cite{mal2} &  0.3468  &  0.4076  & 0.7954   &  -       &  -       &  -       \\
+2-VIS+BLSTM &\*{0.3578}&\*{0.4683}& 0.8215   &  0.5509  &  0.6534  & 0.8864   \\
+FULL        &\*{0.3694}&\*{0.4815}&\*{0.8268}&\*{0.5784}&\*{0.6790}&\*{0.8952}\\
 \hline
-HUMAN        &  0.6027  &  0.6104  &  0.7896  &  -       &  -       &  -       \\
+HUMAN       &  0.6027  &  0.6104  &  0.7896  &  -       &  -       &  -       \\
 \hline
 \end{tabular}
+
 \end{center}
 \end{table}
 \vfill
@@ -312,6 +324,7 @@ HUMAN        &  0.6027  &  0.6104  &  0.7896  &  -       &  -       &  -       \
 \small
 \label{tab:cocoqa_acc_breakdown}
 \begin{center}
+
 \begin{tabular}{c c c c c}
 \hline
            &   Object  &   Number &   Color   & Location \\
@@ -321,12 +334,14 @@ BOW        &   0.3727  &   0.4356 &   0.3475  & 0.4084   \\
 LSTM       &   0.3587  &   0.4534 &   0.3626  & 0.3842   \\
 IMG        &   0.4073  &   0.2926 &   0.4268  & 0.4419   \\
 IMG+PRIOR  &   -       &   0.3739 &   0.4899  & 0.4451   \\
+K-NN       &   0.4799  &   0.3699 &   0.3723  & 0.4080   \\
 IMG+BOW    &\*{0.5866} &   0.4410 &\*{0.5196} &\*{0.4939}\\
 VIS+LSTM   &   0.5653  &\*{0.4610}&   0.4587  & 0.4552   \\
 2-VIS+BLSTM&   0.5817  &   0.4479 &   0.4953  & 0.4734   \\
 FULL       &\*{0.6108} &\*{0.4766}&   0.5148  &\*{0.5028}\\
 \hline
 \end{tabular}
+
 \end{center}
 \end{table}
 
@@ -338,8 +353,7 @@ FULL       &\*{0.6108} &\*{0.4766}&   0.5148  &\*{0.5028}\\
 
 %-- Column 3 ---------------------------------------------------
 \begin{column}{0.32\linewidth}
-\minipage[c][0.9\textheight][s]{\columnwidth}
-\vfill
+\minipage[t][0.9\textheight][s]{\columnwidth}
 
 %-- Block 3-1 --------------------------------------------------
 \begin{block}{\bf{\large More Examples}}
@@ -347,215 +361,221 @@ FULL       &\*{0.6108} &\*{0.4766}&   0.5148  &\*{0.5028}\\
 \begin{figure}
 \centering\tiny
 $\begin{array}{p{8.3cm} p{8.3cm} p{8.3cm} p{8.3cm}}
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{4018.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        COCOQA 4018\\
-        \*{What is the color of the bowl?}\\
-        Ground truth: blue\\
-        IMG+BOW: \textcolor{green}{blue (0.49)}\\
-        2-VIS+LSTM: \textcolor{green}{blue (0.52)}\\
-        BOW: \textcolor{red}{white (0.45)}
 
-        \vskip 0.05in
-        COCOQA 4018a\\
-        \*{What is the color of the vest?}\\
-        Ground truth: red\\
-        IMG+BOW: \textcolor{green}{red (0.29)}\\
-        2-VIS+LSTM: \textcolor{red}{orange (0.37)}\\
-        BOW: \textcolor{red}{orange (0.57)}
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{1520.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        DAQUAR 1522\\
-        \*{How many chairs are there?}\\
-        Ground truth: two\\
-        IMG+BOW: \textcolor{red}{four (0.24)}\\
-        2-VIS+BLSTM: \textcolor{red}{one (0.29)}\\
-        LSTM: \textcolor{red}{four (0.19)}
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{33827.jpg}}
 
-        \vskip 0.05in
-        DAQUAR 1520\\
-        \*{How many shelves are there?}\\
-        Ground truth: three\\
-        IMG+BOW: \textcolor{green}{three (0.25)}\\
-        2-VIS+BLSTM: \textcolor{red}{two (0.48)}\\
-        LSTM: \textcolor{red}{two (0.21)}
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]
-        {25218.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        COCOQA 14855\\
-        \*{Where are the ripe bananas sitting?}\\
-        Ground truth: basket\\
-        IMG+BOW: \textcolor{green}{basket (0.97)}\\
-        2-VIS+BLSTM: \textcolor{green}{basket (0.58)}\\
-        BOW: \textcolor{red}{bowl (0.48)}
+\parbox{8cm}{
+\vskip 0.2in
+COCOQA 33827\\
+\*{What is the color of the cat?}\\
+Ground truth: black\\
+I+BOW: \textcolor{green}{black (0.55)}\\
+2V+LSTM: \textcolor{green}{black (0.73)}\\
+BOW: \textcolor{red}{gray (0.40)}
 
-        \vskip 0.05in
-        COCOQA 14855a\\
-        \*{What are in the basket?}\\
-        Ground truth: bananas\\
-        IMG+BOW: \textcolor{green}{bananas (0.98) }\\
-        2-VIS+BLSTM: \textcolor{green}{bananas (0.68)}\\
-        BOW: \textcolor{green}{bananas (0.14)}
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{585.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        DAQUAR 585\\
-        \*{What is the object on the chair?}\\
-        Ground truth: pillow\\
-        IMG+BOW: \textcolor{red}{clothes (0.37)}\\
-        2-VIS+BLSTM: \textcolor{green}{pillow (0.65) }\\
-        LSTM: \textcolor{red}{clothes (0.40)}
-        
-        \vskip 0.05in
-        DAQUAR 585a\\
-        \*{Where is the pillow found?}\\
-        Ground truth: chair\\
-        IMG+BOW: \textcolor{red}{bed (0.13)}\\
-        2-VIS+BLSTM: \textcolor{green}{chair (0.17) }\\
-        LSTM: \textcolor{red}{cabinet (0.79)}
-    }
-    \\
-    \noalign{\smallskip}\noalign{\smallskip}\noalign{\smallskip}\noalign{\smallskip}
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]
-        {24952.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        COCOQA 23419\\
-        \*{What is the black and white cat wearing?}\\
-        Ground truth: hat\\
-        IMG+BOW: \textcolor{green}{hat (0.50)}\\
-        2-VIS+BLSTM: \textcolor{red}{tie (0.34)}\\
-        BOW: \textcolor{red}{tie (0.60)}
-        \vskip 0.05in
-        COCOQA 23419a\\
-        \*{What is wearing a hat?}\\
-        Ground truth: cat\\
-        IMG+BOW: \textcolor{green}{cat (0.94)}\\
-        2-VIS+BLSTM: \textcolor{green}{cat (0.90)}\\
-        BOW: \textcolor{red}{dog (0.42)}
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{2136.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        DAQUAR 2136\\
-        \*{What is right of table?}\\
-        Ground truth: shelves\\
-        IMG+BOW: \textcolor{green}{shelves (0.33)}\\
-        2-VIS+BLSTM: \textcolor{green}{shelves (0.28)}\\
-        LSTM: \textcolor{green}{shelves (0.20)}
+\vskip 0.2in
+COCOQA 33827a\\
+\*{What is the color of the couch?}\\
+Ground truth: red\\
+I+BOW: \textcolor{green}{red (0.65)}\\
+2V+LSTM: \textcolor{red}{black (0.44)}\\
+BOW: \textcolor{green}{red (0.39)}
+}
+&
 
-        \vskip 2mm
-        DAQUAR 2136a\\
-        \*{What is in front of table?}\\
-        Ground truth: chair\\
-        IMG+BOW: \textcolor{green}{chair (0.64)}\\
-        2-VIS+BLSTM: \textcolor{green}{chair (0.31)}\\
-        LSTM: \textcolor{green}{chair (0.37)}
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{22891.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        COCOQA 22891\\
-        \*{What is the color of the coat?}\\
-        Ground truth: yellow\\
-        IMG+BOW: \textcolor{red}{black(0.45)}\\
-        VIS+LSTM: \textcolor{green}{yellow (0.24)}\\
-        BOW:  \textcolor{red}{red (0.28)}
-        \vskip 0.05in
-        COCOQA 22891a\\
-        \*{What is the color of the umbrella?}\\
-        Ground truth: red\\
-        IMG+BOW: \textcolor{red}{black (0.28)}\\
-        VIS+LSTM: \textcolor{red}{yellow (0.26)}\\
-        BOW:  \textcolor{green}{red (0.29) }
-    }
-    &
-    \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{498.jpg}}
-    \parbox{8cm}{
-        \vskip 0.05in
-        COCOQA 498\\
-        \*{How many vintage refrigerators blue and red in color?}\\
-        Ground truth: four\\
-        IMG+BOW: \textcolor{red}{five (0.25)}\\
-        2-VIS+BLSTM: \textcolor{green}{four (0.29)}\\
-        BOW:  \textcolor{red}{one (0.24)}
-        \vskip 0.05in
-        COCOQA 498a\\
-        \*{How many refrigerators are blue?}\\
-        Ground truth: two\\
-        IMG+BOW: \textcolor{red}{four (0.35)}\\
-        2-VIS+BLSTM: \textcolor{red}{six (0.09)}\\
-        BOW:  \textcolor{green}{two (0.37) }
-    }
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{1520.jpg}}
+
+\parbox{8cm}{
+\vskip 0.2in
+DAQUAR 1522\\
+\*{How many chairs are there?}\\
+Ground truth: two\\
+I+BOW: \textcolor{red}{four (0.24)}\\
+2V+BLSTM: \textcolor{red}{one (0.29)}\\
+LSTM: \textcolor{red}{four (0.19)}
+
+\vskip 0.2in
+DAQUAR 1520\\
+\*{How many shelves are there?}\\
+Ground truth: three\\
+I+BOW: \textcolor{green}{three (0.25)}\\
+2V+BLSTM: \textcolor{red}{two (0.48)}\\
+LSTM: \textcolor{red}{two (0.21)}
+}
+&
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{25218.jpg}}
+
+\parbox{8cm}{
+\vskip 0.2in
+COCOQA 14855\\
+\*{Where are the ripe bananas sitting?}\\
+Ground truth: basket\\
+I+BOW: \textcolor{green}{basket (0.97)}\\
+2V+BLSTM: \textcolor{green}{basket (0.58)}\\
+BOW: \textcolor{red}{bowl (0.48)}
+
+\vskip 0.2in
+COCOQA 14855a\\
+\*{What are in the basket?}\\
+Ground truth: bananas\\
+I+BOW: \textcolor{green}{bananas (0.98) }\\
+2V+BLSTM: \textcolor{green}{bananas (0.68)}\\
+BOW: \textcolor{green}{bananas (0.14)}
+}
+&
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{585.jpg}}
+
+\parbox{8cm}{
+\vskip 0.2in
+DAQUAR 585\\
+\*{What is the object on the chair?}\\
+Ground truth: pillow\\
+I+BOW: \textcolor{red}{clothes (0.37)}\\
+2V+BLSTM: \textcolor{green}{pillow (0.65) }\\
+LSTM: \textcolor{red}{clothes (0.40)}
+
+\vskip 0.2in
+DAQUAR 585a\\
+\*{Where is the pillow found?}\\
+Ground truth: chair\\
+I+BOW: \textcolor{red}{bed (0.13)}\\
+2V+BLSTM: \textcolor{green}{chair (0.17) }\\
+LSTM: \textcolor{red}{cabinet (0.79)}
+}
+
+\\
+\noalign{\vskip 0.5in}
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{24952.jpg}}
+
+\parbox{8cm}{
+\vskip 0.2in
+COCOQA 23419\\
+\*{What is the black and white cat wearing?}\\
+Ground truth: hat\\
+I+BOW: \textcolor{green}{hat (0.50)}\\
+2V+BLSTM: \textcolor{red}{tie (0.34)}\\
+BOW: \textcolor{red}{tie (0.60)}
+
+\vskip 0.2in
+COCOQA 23419a\\
+\*{What is wearing a hat?}\\
+Ground truth: cat\\
+I+BOW: \textcolor{green}{cat (0.94)}\\
+2V+BLSTM: \textcolor{green}{cat (0.90)}\\
+BOW: \textcolor{red}{dog (0.42)}
+}
+&
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{2136.jpg}}
+
+\parbox{8cm}{
+\vskip 0.2in
+DAQUAR 2136\\
+\*{What is right of table?}\\
+Ground truth: shelves\\
+I+BOW: \textcolor{green}{shelves (0.33)}\\
+2V+BLSTM: \textcolor{green}{shelves (0.28)}\\
+LSTM: \textcolor{green}{shelves (0.20)}
+
+\vskip 0.2in
+DAQUAR 2136a\\
+\*{What is in front of table?}\\
+Ground truth: chair\\
+I+BOW: \textcolor{green}{chair (0.64)}\\
+2V+BLSTM: \textcolor{green}{chair (0.31)}\\
+LSTM: \textcolor{green}{chair (0.37)}
+}
+&
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{22891.jpg}}
+
+\parbox{8cm}{
+\vskip 0.2in
+COCOQA 22891\\
+\*{What is the color of the coat?}\\
+Ground truth: yellow\\
+I+BOW: \textcolor{red}{black(0.45)}\\
+V+LSTM: \textcolor{green}{yellow (0.24)}\\
+BOW:  \textcolor{red}{red (0.28)}
+
+\vskip 0.2in
+COCOQA 22891a\\
+\*{What is the color of the umbrella?}\\
+Ground truth: red\\
+I+BOW: \textcolor{red}{black (0.28)}\\
+V+LSTM: \textcolor{red}{yellow (0.26)}\\
+BOW:  \textcolor{green}{red (0.29) }
+}
+&
+
+\scalebox{0.23}{
+\includegraphics[width=\textwidth, height=.7\textwidth]{498.jpg}}
+
+\parbox{8cm}{
+\vskip 0.2in
+COCOQA 498\\
+\*{How many vintage refrigerators blue and red in color?}\\
+Ground truth: four\\
+I+BOW: \textcolor{red}{five (0.25)}\\
+2V+BLSTM: \textcolor{green}{four (0.29)}\\
+BOW:  \textcolor{red}{one (0.24)}
+\vskip 0.2in
+COCOQA 498a\\
+\*{How many refrigerators are blue?}\\
+Ground truth: two\\
+I+BOW: \textcolor{red}{four (0.35)}\\
+2V+BLSTM: \textcolor{red}{six (0.09)}\\
+BOW:  \textcolor{green}{two (0.37) }
+}
 \end{array}$
+
+\vskip 0.5in
 \caption{Sample questions and responses of our system. For some of the examples, we specifically tested extra questions (the ones have 
 an ``a'' in the question ID).}
 \label{fig:selected_questions}
 \end{figure}
+\end{block}
+\vfill
 
+\begin{block}{\bf{\large Download}}
 \begin{itemize}
-% \item In DAQUAR, blind models can perform almost equally well. Larger 
-% performance differences in COCO-QA.
-% \item Simple bag-of-words can perform equally well compared to recurrent neural 
-% network.
-% \item Performance gain is largely from image features trained on object 
-% recognition.
-% \item Poor performance when asked about details of the image (non-salient 
-% object), and about numbers and colors of objects.
-% \item Sometimes the blind models can equally guess the most probable objects 
-% (e.g., chairs should be around the dining table).
-% \item Adding prior knowledge provides an immediate gain 
-% on the ``IMG'' model in terms of accuracy on Color and Number questions.
-\item Full results: http://www.cs.toronto.edu/\textasciitilde mren/imageqa/results
+\item Download dataset, software (models and question generation), and full
+results at \url{http://www.cs.toronto.edu/\textasciitilde mren/imageqa}
 \end{itemize}
 \end{block}
 \vfill
 
 %-- Block 3-2 --------------------------------------------------
 \begin{block}{\bf{\large Conclusion}}
-  \begin{itemize}
-  \item We present our end-to-end neural network models to image QA.
-  \item Simple bag-of-words can perform equally well compared to recurrent 
-  neural network.
-  \item Models have large space for improvement on questions such as color and counting.
-  \item We release an Image QA dataset that is automatically generated from image description. Download: http://www.cs.toronto.edu/\textasciitilde mren/imageqa/data/cocoqa
-  \end{itemize}
+\begin{itemize}
+\item We present our end-to-end neural network models to image QA.
+
+\item Simple bag-of-words can perform equally well compared to recurrent neural
+network.
+
+\item Models have large space for improvement on questions such as color and
+counting.
+
+\item We release an Image QA dataset that is automatically generated from image
+description.
+\end{itemize}
 \end{block}
 \vfill
 
 %-- Block 3-3 --------------------------------------------------
-\begin{block}{\bf{\large Current Directions}}
-  \begin{itemize}
-  \item Free-form text generation model. Similar to image captioning, it will require an automatic free-form answer evaluation metric.
-  \item Extend questions to open domain.
-  \item Use of visual attention to improve results and interpret output (based on recent successes of viusal attention in image captioning \cite{xu15}).
-  \end{itemize}
-\end{block}
-\vfill
-
-%-- Block 3-4 --------------------------------------------------
 \begin{block}{\bf{\large References}}
-  \footnotesize{\bibliography{Reference}}
-  \footnotesize{\bibliographystyle{unsrt}}
+\footnotesize{\bibliography{Reference}}
+\footnotesize{\bibliographystyle{unsrt}}
 \end{block}
 
 \endminipage
