--- a/poster.tex
+++ b/poster.tex
@@ -587,7 +587,7 @@ description.
 
 %-- Block 3-3 --------------------------------------------------
 \begin{block}{\bf{\large References}}
-\footnotesize{\bibliography{Reference}}
+\footnotesize{\bibliography{references}}
 \footnotesize{\bibliographystyle{unsrt}}
 \end{block}
 
