--- a/poster.tex
+++ b/poster.tex
@@ -553,8 +553,9 @@ BOW:  \textcolor{green}{two (0.37) }
 \end{array}$
 
 \vskip 0.5in
-\caption{Sample questions and responses of our system. For some of the examples, we specifically tested extra questions (the ones have 
-an ``a'' in the question ID).}
+\caption{Sample questions and responses of our system. For some of the
+examples, we specifically tested extra questions (the ones have an ``a'' in the
+question ID).}
 \label{fig:selected_questions}
 \end{figure}
 \end{block}
